--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="few">
 			<p>-10 points</p>
 			<img src="boo.png" alt="boo">
-			<img src="goomba.png" alt="goomba">
+			<img src="goomba.PNG" alt="goomba">
 		</div>
 		<div class="few">
 			<p>-50 points</p>
